@@ -545,7 +545,7 @@ class EditDelegate(Delegate):
         self.uim.get_widget('/ui/main_toolbar').set_sensitive(sensitive)
 
         get_toolbar = gtklib.get_parent_widget
-        video_toolbar = get_toolbar(self.video_file_button, gtk.Toolbar)
+        video_toolbar = get_toolbar(self.video_button, gtk.Toolbar)
         video_toolbar.set_sensitive(sensitive)
 
 
