@@ -1,5 +1,16 @@
 2006-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
+	* lib/gaupol/gtk/application.py:
+	* lib/gaupol/gtk/delegates/appupdate.py:
+	* lib/gaupol/gtk/delegates/edit.py:
+	* lib/gaupol/gtk/delegates/fileopen.py:
+	* lib/gaupol/gtk/delegates/guiinit.py:
+	* lib/gaupol/gtk/delegates/view.py:
+	* lib/gaupol/gtk/delegates/viewupdate.py:
+	  Renamed several application's widgets.
+
+2006-02-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
 	* lib/gaupol/constants.py:
 	* lib/gaupol/gtk/application.py:
 	* lib/gaupol/gtk/entries/time.py:
